# mkz_mpc_path_follower

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: dbw_mkz_vg.launch  gazebo_mkz_sim_lane_keep_demo.launch  lane_keep_demo_vg.launch  path_follow.launch  path_record.launch  sim_path_follow.launch  start_dbw_mkz.launch
msg/: MPC_cmd.msg  acc_stamped.msg
scripts/: demo_open_loop_acc.py  demo_open_loop_steer.py  gps_plotter.py  mpc_cmd_pub.jl  mpc_cmd_pub_frenet.jl  state_publisher.py  vehicle_simulator.py
scripts/analysis/: bag_file_reader.py  eval_vehicle_mdl.py  extract_full_track.py  get_path_tracking_results.py  make_video.py  parse_bag.py  plot_gps.py  plot_gps_2.py  plot_llc_results.py  plot_low_level_control.py  plot_mpc_results.jl  plot_mpc_results_frenet.jl  plot_path.py  plot_path_tracking_error.py  topic_parser.py
scripts/ekf/: ekf_state_estimation.py  state_est_pub.py  state_est_utils.py
scripts/mpc_utils/: KinMPCPathFollower.jl  KinMPCPathFollowerFrenet.jl  MKZMPCPathFollower.jl  MKZMPCPathFollowerFrenet.jl  kinematic_mpc_module.jl  kinematic_mpc_module_frenet.jl  mpc_tester.jl
scripts/nodes_gazebo_sim/: gazebo_sim_mpc_cmd_pub.jl  gazebo_sim_mpc_cmd_pub_frenet.jl
scripts/nodes_open_loop_demo/: demo_open_loop_acc.py  demo_open_loop_steer.py
scripts/old/: bag_file_replay_old.jl  bag_file_replay_old.py  bkcp_3_16_18_kinmpcmodule.jl  bkcp_3_19_18_kinmpcmodule.jl  imu_orientation_test.py  interpolation_res.txt  kinematic_mpc_module_bkcp_5_14_2018.jl  kinematic_mpc_module_poly.jl  mpc_cmd_pub.jl  mpc_cmd_pub_poly.jl  mpc_cmd_vel_pub_old.jl  nav_msgs_path_interpolation.jl  simple_mpc_module.jl
src/: LowLevelControlNode.cpp  LowLevelController.cpp  LowLevelController.h  LowPass.h  PidControl.h
(+7 files in other folders)
