<?xml version="1.0"?>
<package format="2">
  <name>mkz_mpc_path_follower</name>
  <version>0.0.1</version>
  <description>
      Model Predictive Control-Based Path Follower for Lincoln MKZ Simulator.
      It interfaces with the dbw_mkz_vision_sim package developed by Micho Radovnickovich at DataSpeed Inc.
      MPC code is based off the BARC platform developed by MPC Lab, UC Berkeley (https://github.com/MPC-Berkeley/barc).
  </description>
  <maintainer email="govvijay@berkeley.edu">Vijay Govindarajan</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dbw_mkz_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>dbw_mkz_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>dbw_mkz_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

 <!-- For MPC_cmd.msg -->
 <build_depend>message_generation</build_depend>
 <exec_depend>message_runtime</exec_depend>  

</package>
